[package]
name = "people_example"
version = "0.1.0"
edition = "2021"
publish = false

[features]

[dependencies]
paste = { version = "1.0.9" }
derive_more = { version = "0.99.17", features = ["add", "not", "from"] }
dbsp = { path = "../../crates/dbsp"}
dbsp_adapters = { path = "../../crates/adapters", default-features = false }
pipeline_types = { path = "../../crates/pipeline-types" }
sqllib = { path = "../../sql-to-dbsp-compiler/lib/sqllib" }
json = { path = "../../sql-to-dbsp-compiler/lib/json" }
sqlvalue = { path = "../../sql-to-dbsp-compiler/lib/sqlvalue" }
serde = { version = "1.0", features = ["derive"] }
compare = { version = "0.1.0" }
size-of = { version="0.1.3", features = ["hashbrown", "time-std", "xxhash-xxh3", "rust_decimal"]}
geo = { version = "0.26.0" }
geo-types = { version = "0.7" }
rust_decimal = { git = "https://github.com/gz/rust-decimal.git", rev = "ea85fdf", features = ["rkyv", "rkyv-64"] }
serde_json = { version = "1.0.89" }
chrono = { version = "0.4.31" }
rkyv = { git = "https://github.com/gz/rkyv.git", rev = "3d3fd86", default-features = false, features = ["std", "size_64", "extra_traits"] }
num = { version = "0.4.1" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.4", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }

[dev-dependencies]
hashing = { path = "../../sql-to-dbsp-compiler/lib/hashing" }
readers = { path = "../../sql-to-dbsp-compiler/lib/readers" }
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "sqlite", "any"] }
uuid = { version = "1.6.1" }

[lib]
path = "src/lib.rs"
doctest = false

# Covered by root Cargo.toml
## Incremental builds sometimes crash the Rust compiler
#[profile.test]
#incremental = false
#
#[patch.crates-io]
#rkyv = { git = "https://github.com/gz/rkyv.git", rev = "3d3fd86" }
#rust_decimal = { git = "https://github.com/gz/rust-decimal.git", rev = "ea85fdf" }
#size-of = { git = "https://github.com/gz/size-of.git", rev = "3ec40db" }